Overflow scroll moved from html to body to stop scrolling when modal is active

--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -7,6 +7,9 @@
 html {
     background-color: #222;
     color: white;
+}
+
+body {
     overflow-y: scroll;
 }
 
